# masknmf-toolbox

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  setup.py
.github/workflows/: docs-deploy.yml  test_install.yml
1p_voltage_culture_scripts/: compress_and_denoise.py  process_dataset.py
1p_voltage_culture_scripts/matlab_scripts/: mini_a.m  readBinMov.m
docs/: requirements.txt
docs/source/: conf.py  gettingframes.rst  index.rst
docs/source/_static/: switcher.json
docs/source/_templates/autosummary/: class.rst  method.rst  property.rst
docs/source/api/: index.rst
docs/source/api/compression/: PMDArray.rst  index.rst
examples/: GALLERY_HEADER.rst
examples/compression/: README.rst  pmd_compression.py
examples/tests/: test_examples.py  testutils.py
ibl_scripts/: README.md  compress_and_denoise.py  demix_data.py  ibl_pmd_vis.ipynb  motion_correct_data.py  s2p_inspection_gui.ipynb  s2p_inspection_utils.py  train_blindspot_net.py
ibl_scripts/ibl_download_infra/: download_raw_ibl.py
ibl_wfci_2026_jan/: README.md  behavioral_correlation_analysis.ipynb  channel_by_channel_compare.ipynb  dimensionality_analyses.ipynb  explore_chris_krasniak_data.ipynb  hemo_compare_trial_avg.ipynb  iblwfci_utils.py  iblwfci_vis.py  pipeline.py  stimulus_onset_xcorr_trial_avg.ipynb  trial_averaged_gcamp_vis.ipynb  vis.py  visualize_all_channels.ipynb
ibl_wfci_scripts/: README.md  denoise_then_hemocorr.py  hemocorr_then_denoise.py
masknmf/: __init__.py  __main__.py  _version.py  default_ops.py  run_masknmf.py  utils.py  visualization.py
masknmf/arrays/: __init__.py  array_interfaces.py  data_loaders.py  lazy_array.py  pmd_array.py
masknmf/compression/: README.md  __init__.py  compression_strategies.py  decomposition.py  denoising.py  diagnostics.py  pmd_array.py  preprocessing.py
masknmf/demixing/: __init__.py  background_estimation.py  demixing_arrays.py  demixing_results.py  demixing_utils.py  filters.py  initialization_results.py  regression_update.py  signal_demixer.py
masknmf/demixing/demixing_arrays/: __init__.py  ac_array.py  bah  colorful_ac_array.py  demixing_array_utils.py  fluctuating_background_array.py  residual_array.py  residual_correlation_images.py  standard_correlation_images.py  static_baseline.py
masknmf/diagnostics/: __init__.py  compression_diagnostics.py  voltage_diagnostics.py
masknmf/motion_correction/: __init__.py  moco_preprocessing.py  registration_arrays.py  registration_methods.py  spatial_filters.py  strategies.py  template_estimation.py
masknmf/multisession/: __init__.py  tracking.py  utils.py
masknmf/pipelines/: __init__.py  _base.py  demixing_configs.py
masknmf/pipelines/configs/: __init__.py  compression_configs.py  demixing_configs.py  motion_correction_configs.py
masknmf/pipelines/twophoton_calcium/: __init__.py  twophoton_population_imaging.py
masknmf/pipelines/widefield/: widefield_calcium.py
masknmf/utils/: __init__.py  _cuda.py  _serialization.py  display.py  linalg.py
masknmf/visualization/: __init__.py  demixing_vis.py  interactive_guis.py  motion_vis.py  plots.py
nectowlab/: README.md  detrend_compress_demix.ipynb  motion_correct_data.ipynb
notebooks/: high_pass_demixing_pipeline.ipynb  make_reg_for_amol.ipynb  mbo_temp_demo.ipynb  moco_and_pmd.ipynb  moco_pmd_demix_lbm.ipynb
notebooks/1p_voltage_demixing/: flynn_demixing.ipynb
notebooks/1p_voltage_optostim/: high_pass_with_bg_term.ipynb
notebooks/compression_demos/: compression_demo.ipynb
notebooks/denoising/: blind_spot_compression.ipynb  training_demo.ipynb
notebooks/mbo_demos/: dev.ipynb  dev_plane_11.ipynb  dev_roi_1_plane_7.ipynb  dev_view_results.ipynb  lbm_pipeline.ipynb  mbo_temp_demo.ipynb  moco_pmd_demix_lbm.ipynb  scan_phase.ipynb
notebooks/motion_correction_demos/: explore_shifts.ipynb  mbo_temp_demo.ipynb  pwrigid_motion_correction.ipynb  rigid_motion_correction.ipynb
notebooks/visualization/: data_loading_demo.ipynb  offset_subtraction_demo.ipynb  stack_vis.ipynb
scripts/: 213107tUTC_santi.py  eval_demixing.py  mk301_07_11_2025.py  run_pipeline_mbo.py  scratch.py
tests/: test_masknmf.py  test_pmd_decomposition.py
