[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "masknmf-toolbox"
version = "0.1.0"
description = "masknmf pipeline for motion correction, denoising, compression, and demixing of functional neuroimaging data"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11, <3.13"  # ">=3.10"
authors = [
    { name = "Amol Pasarkar" },
]

keywords = ["neuroimaging", "motion correction", "demixing", "calcium imaging"]
dependencies = [
    "torch>2",
    "numpy",
    "scipy",
    "h5py",
    "scikit-image",
    "cvxpy>=1.6.5",

    "ipykernel",
    "future",
    "line-profiler",
    "networkx",
    "tqdm",
    "hydra-core",
    "icecream",
    # plotting
    "plotly",
    "fastplotlib @ git+https://github.com/fastplotlib/fastplotlib.git@main",
    # "pygfx @ git+https://github.com/pygfx/pygfx.git@main",
    "matplotlib",
    "jupyter-rfb>=0.5.1",
    "jupyterlab",
    "simplejpeg",
    "imgui-bundle",
    "PyQt5==5.15.11",
    "pyqt5-qt5==5.15.2; sys_platform == 'win32'",
    "pyqt5-qt5==5.15.16; sys_platform == 'darwin' or sys_platform == 'linux'",
    "ipywidgets>=8.0.0,<9",
    "glfw",
    "pytorch-lightning>=2.5.2",
]

[project.scripts]
masknmf = "masknmf.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]

[project.urls]
Homepage = "https://github.com/apasarkar/masknmf-toolbox"
Repository = "https://github.com/apasarkar/masknmf-toolbox"
Issues = "https://github.com/apasarkar/masknmf-toolbox/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["masknmf", "masknmf.*"] 

