[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "masknmf-toolbox"
version = "0.1.0"
description = "masknmf pipeline for motion correction, denoising, compression, and demixing of functional neuroimaging data"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11, <3.13"  # ">=3.10"
authors = [
    { name = "Amol Pasarkar" },
]
keywords = ["neuroimaging", "motion correction", "demixing", "calcium imaging"]
dependencies = [
    "torch>2",
    "numpy",
    "scipy",
    "h5py",
    "scikit-image",
    "cvxpy>=1.6.5",
    "networkx",
    "tqdm",
    "plotly",
    "matplotlib",
    "jupyterlab",
    "pytorch-lightning>=2.5.2",
    "tensorboard>=2.20.0",
    "fastplotlib[imgui,notebook]>=0.5.1",
    "simplejpeg",
]

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-gallery",
    "pydata-sphinx-theme",
    "sphinx-copybutton",
    "sphinx-design",
    "pandoc",
    "imageio[ffmpeg]",
]

dev = [
    "pytest>=8.4.0",
    "ruff>=0.11.13",
    "nbmake",
    "masknmf[docs]",
]

[project.urls]
Homepage = "https://github.com/apasarkar/masknmf-toolbox"
Repository = "https://github.com/apasarkar/masknmf-toolbox"
Issues = "https://github.com/apasarkar/masknmf-toolbox/issues"
